--- a/styles/style.css
+++ b/styles/style.css
@@ -8,9 +8,19 @@
 .address{
  margin-bottom: -15px;
 }
-.header{
- display: flex;
-}
+
+.header {
+    width: 1052px;
+    height: 105px;
+    margin-top: 92px;
+    margin-left: 24px;
+    display: flex;
+    padding-left: 27px;
+    margin-bottom: 50px;
+    grid-template-columns: 1fr min-content 1fr;
+   }
+   
+
 .header_address{
     justify-self: end;
     height: 98px;
