--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,13 @@
 .header_logo-image {
-     width: 148px;
-     height: 105px; 
-     flex-direction: row;
-     justify-content: center;
-     margin-top: -20px;
+    width: 148px;
+    height: 105px;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: -20px;
 }
-.address{
- margin-bottom: -15px;
+
+.address {
+    margin-bottom: -15px;
 }
 
 .header {
@@ -18,49 +19,56 @@
     padding-left: 27px;
     margin-bottom: 50px;
     grid-template-columns: 1fr min-content 1fr;
-   }
-   
+}
 
-.header_address{
+
+.header_address {
     justify-self: end;
     height: 98px;
     text-underline-offset: 3px;
     font-size: 15px;
-   text-align: left; 
-   margin-left: 150px;
+    text-align: left;
+    margin-left: 150px;
 }
-.menu_links{
+
+.menu_links {
     display: flex;
-     flex-direction: row; 
-     justify-content: center; 
+    flex-direction: row;
+    justify-content: center;
     list-style-type: circle;
     font-size: 18px;
     gap: 30px;
 }
-.header_list{
+
+.header_list {
     font-style: normal;
     font-weight: 400;
     text-underline-offset: 5px;
     margin-right: 20px;
 }
-.header_active{
+
+.header_active {
     text-decoration: none;
 }
-.aligned-text{
+
+.aligned-text {
     z-index: 2;
 }
-.aligned-text_center{
+
+.aligned-text_center {
     text-align: center;
-margin-top: 100px;
-z-index: 2;
+    margin-top: 100px;
+    z-index: 2;
 }
-.aligned-text_right{
+
+.aligned-text_right {
     text-align: right;
     margin-top: 200px;
     margin-right: -200px;
     z-index: 2;
 }
-.cover_title{
+
+.cover_title {
     z-index: 2;
     letter-spacing: 0.3em;
     display: flex;
@@ -68,28 +76,33 @@ z-index: 2;
     line-height: 1;
     font-weight: 700;
     color: #fff;
-     font-size: 80px; 
+    font-size: 80px;
     line-height: 115px;
     margin-right: 300px;
 }
-.letter-spacing-extended { 
-    letter-spacing: 0.6em; } 
+
+.letter-spacing-extended {
+    letter-spacing: 0.6em;
+}
+
 .no-letter-spacing {
-     letter-spacing: 0em; }
+    letter-spacing: 0em;
+}
+
 .cover {
     background-image: url(/images/cover.jpg);
     position: relative;
     background-color: transparent;
-   background-position: center;
-   background-size: cover;
-   padding-bottom: 50px;
-   padding-top: 120px;
-   padding-right: 50px;
-   padding-left: 50px;
-     margin-bottom: 100px;
+    background-position: center;
+    background-size: cover;
+    padding-bottom: 50px;
+    padding-top: 120px;
+    padding-right: 50px;
+    padding-left: 50px;
+    margin-bottom: 100px;
 }
 
-.cover__description-text{
+.cover__description-text {
     color: #fff;
     font-weight: 400;
     font-size: 22px;
@@ -100,16 +113,18 @@ z-index: 2;
     position: absolute;
     z-index: 2;
 }
+
 .overlay {
-        z-index: 1;
-        position: absolute;
-        height: 100%;
-        width: 100%;
-        background-color: rgba(0, 0, 0, 0.6);
-        margin-top: -120px;
-        margin-left: -50px;
+    z-index: 1;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    margin-top: -120px;
+    margin-left: -50px;
 }
-.bet-button{
+
+.bet-button {
     padding-left: 14px;
     padding-top: 13px;
     margin-left: 800px;
@@ -120,17 +135,19 @@ z-index: 2;
     text-decoration: none;
     z-index: 2;
     text-transform: uppercase;
-    border: 1px solid rgba(255, 255, 255, 1) ;
+    border: 1px solid rgba(255, 255, 255, 1);
     width: 300px;
     height: 51px;
-    
+
 }
+
 .cover__description {
     margin-top: 80px;
     display: flex;
     align-items: center;
     z-index: 2;
-  }
+}
+
 .card_type_film {
     background-image: url(/images/card-lot-01.jpg);
     width: 334px;
@@ -140,7 +157,8 @@ z-index: 2;
     background-size: cover;
     position: relative;
 }
-.card_type_book{
+
+.card_type_book {
     background-image: url(/images/card-lot-02.jpg);
     width: 334px;
     height: 563px;
@@ -149,7 +167,8 @@ z-index: 2;
     background-size: cover;
     position: relative;
 }
-.card_type_picture{
+
+.card_type_picture {
     background-image: url(/images/card-lot-03.jpg);
     padding: 10px;
     width: 334px;
@@ -158,7 +177,8 @@ z-index: 2;
     background-size: cover;
     position: relative;
 }
-.name_list{
+
+.name_list {
     width: 121px;
     height: 47px;
     font-weight: 700;
@@ -166,17 +186,20 @@ z-index: 2;
     line-height: 47px;
     margin-left: 48px;
 }
-.lost_card_list{
+
+.lost_card_list {
     position: relative;
     display: flex;
     gap: 20px;
     margin-top: 30px;
-   width: 334px;
+    width: 334px;
 }
-.lots_card_list_item{
+
+.lots_card_list_item {
     list-style-type: none;
 }
-.card_title{
+
+.card_title {
     position: relative;
     z-index: 2;
     width: 254px;
@@ -187,12 +210,13 @@ z-index: 2;
     font-size: 22px;
     line-height: 27px;
     color: rgba(255, 255, 255, 1);
-    text-decoration:underline rgba(255, 255, 255, 1) solid;
+    text-decoration: underline rgba(255, 255, 255, 1) solid;
     text-transform: uppercase;
     text-underline-offset: 4px;
-    
+
 }
-.card_text_film{
+
+.card_text_film {
     position: relative;
     z-index: 2;
     font-size: 20px;
@@ -202,9 +226,10 @@ z-index: 2;
     width: 254px;
     height: 144px;
     margin-top: 250px;
-    
+
 }
-.card_text_book{
+
+.card_text_book {
     position: relative;
     z-index: 2;
     font-size: 20px;
@@ -215,7 +240,8 @@ z-index: 2;
     height: 360px;
     margin-top: 40px;
 }
-.card_text_picture{
+
+.card_text_picture {
     position: relative;
     z-index: 2;
     font-size: 20px;
@@ -226,25 +252,30 @@ z-index: 2;
     height: 360px;
     margin-top: 120px;
 }
-.card_link{
+
+.card_link {
     text-decoration: none;
 }
-.overlay_card{
+
+.overlay_card {
     z-index: 1;
     position: absolute;
     height: 563px;
     width: 334px;
     background-color: rgba(0, 0, 0, 0.6);
 }
-.look_more{
+
+.look_more {
     margin-left: 70px;
     text-underline-offset: 2px;
 }
-.about_logo_image{
+
+.about_logo_image {
     width: 148px;
     height: 114px;
 }
-.about_logo{
+
+.about_logo {
     position: relative;
     display: flex;
     justify-content: center;
@@ -255,13 +286,15 @@ z-index: 2;
     border-radius: 50%;
     margin-left: 70px;
 }
-.about{
+
+.about {
     margin-top: 200px;
     display: grid;
     grid-template-columns: repeat(3, 12px);
     grid-template-rows: repeat(3, auto);
 }
-.about_title{
+
+.about_title {
     margin-left: 400px;
     font-weight: 700;
     font-size: 40px;
@@ -271,44 +304,52 @@ z-index: 2;
     height: 47px;
     margin-top: 95px;
 }
-.about_text{
+
+.about_text {
     width: 693px;
     height: 312px;
- margin-left: 390px;
- margin-top: 200px;
+    margin-left: 390px;
+    margin-top: 200px;
 }
-.about__text{
+
+.about__text {
     width: 693px;
     height: 312px;
- margin-left: 415px;
- margin-top: -150px;
+    margin-left: 415px;
+    margin-top: -150px;
 }
-.address_footer{
+
+.address_footer {
     text-underline-offset: 4px;
 }
-.footer_text_address{
+
+.footer_text_address {
     margin-top: auto;
 }
-.footer{
+
+.footer {
     width: 1000px;
     height: 98px;
-    
+
     grid-template-columns: repeat(3, 12px);
-grid-template-rows: repeat(3, auto);
+    grid-template-rows: repeat(3, auto);
 
 }
-.footer_menu{
+
+.footer_menu {
     margin-top: -95px;
     text-align: center;
 }
-.footer_menu_main{
+
+.footer_menu_main {
     text-decoration: none;
 }
-.footer_social-list-item{
-display: flex;
-width: 180px;
-height: 48px;
- float: right;
- gap: 40px;
- margin-top: -60px;
+
+.footer_social-list-item {
+    display: flex;
+    width: 180px;
+    height: 48px;
+    float: right;
+    gap: 40px;
+    margin-top: -60px;
 }
